In progress. hooking up Sidebar to conversationAPI
